--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^6.1.1",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
+    "@toolpad/core": "^0.7.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
