--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@mui/material": "^6.1.1",
+    "@mui/x-date-pickers": "^7.18.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.3",
     "@toolpad/core": "^0.7.0",
+    "dayjs": "^1.11.13",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
